// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDPSection /> should render (IDPs pending) 1`] = `
<Card>
  <CardTitle>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardTitle>
  <CardBody>
    <Skeleton
      isDark={false}
      size="lg"
    />
  </CardBody>
  <CardFooter>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardFooter>
</Card>
`;

exports[`<IDPSection /> should render (no IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h2"
      size="lg"
    >
      Identity providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="You do not have permission to add an identity provider. Only cluster owners and organization administrators can add identity providers."
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="top"
      tippyProps={Object {}}
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <span>
        <Button
          className="access-control-add"
          isDisabled={true}
          onClick={[Function]}
          variant="secondary"
        >
          Add identity provider
        </Button>
      </span>
    </Tooltip>
  </CardBody>
</Card>
`;

exports[`<IDPSection /> should render (with IDPs) 1`] = `
<Card>
  <CardBody>
    <Title
      className="card-title"
      headingLevel="h2"
      size="lg"
    >
      Identity providers
    </Title>
    <p>
      Configure identity providers to allow users to log into the cluster.
       
      <a
        href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </p>
    <Table
      actions={
        Array [
          Object {
            "className": "hand-pointer",
            "onClick": [Function],
            "title": "Delete",
          },
          Object {
            "className": "hand-pointer",
            "onClick": [Function],
            "title": "Edit",
          },
        ]
      }
      areActionsDisabled={[Function]}
      aria-label="Identity Providers"
      borders={true}
      canSelectAll={true}
      cells={
        Array [
          Object {
            "title": "Name",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Type",
            "transforms": Array [
              [Function],
            ],
          },
          Object {
            "title": "Auth Callback URL",
            "transforms": Array [
              [Function],
            ],
          },
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        Array [
          Object {
            "cells": Array [
              "hello",
              "GitHub",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="access-control-tables-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hello"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
          Object {
            "cells": Array [
              "hi",
              "Google",
              Object {
                "title": <ClipboardCopyLinkButton
                  className="access-control-tables-copy"
                  isDisabled={false}
                  text="https://oauth-openshift.com/oauth2callback/hi"
                >
                  Copy URL to clipboard
                </ClipboardCopyLinkButton>,
              },
            ],
            "idpID": "id",
          },
        ]
      }
      variant="compact"
    >
      <TableHeader />
      <Component />
    </Table>
    <Tooltip
      appendTo={[Function]}
      aria="describedby"
      boundary="window"
      className=""
      content="You do not have permission to add an identity provider. Only cluster owners and organization administrators can add identity providers."
      distance={15}
      enableFlip={true}
      entryDelay={500}
      exitDelay={500}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      id=""
      isAppLauncher={false}
      isContentLeftAligned={false}
      isVisible={false}
      maxWidth="18.75rem"
      position="top"
      tippyProps={Object {}}
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <span>
        <Button
          className="access-control-add"
          isDisabled={true}
          onClick={[Function]}
          variant="secondary"
        >
          Add identity provider
        </Button>
      </span>
    </Tooltip>
  </CardBody>
</Card>
`;
